--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>فروشگاه دیوار ساده</title>
-  <meta name="google-site-verification" content="google8f221851c93319b4.htm">
+  <meta name="google-site-verification" content="dQfLfNqJ-BvcwCEXscJ5jbSVnt9V7G5ORYkjX1SpazU" />
   <meta name="description" content="سایت دیوار ساده برای ثبت آگهی و خرید و فروش در شهرهای کابل، بلخ و هرات. آگهی خود را به آسانی ثبت کنید.">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
@@ -19,6 +19,9 @@
       background-attachment: fixed;
       color: #fff;
       backdrop-filter: brightness(0.95);
+      display: flex;
+      flex-direction: column;
+      min-height: 100vh;
     }
 
     header {
@@ -45,6 +48,10 @@
       background-color: #ff5252;
       color: white;
       cursor: pointer;
+    }
+
+    main {
+      flex-grow: 1;
     }
 
     .cities {
@@ -89,13 +96,36 @@
       border-radius: 5px;
       border: 1px solid #ccc;
     }
+
+    footer {
+      background: rgba(0,0,0,0.6);
+      color: #fff;
+      padding: 15px;
+      text-align: center;
+      font-size: 0.9em;
+      margin-top: auto;
+    }
+
+    footer a {
+      color: #ff5252;
+      text-decoration: none;
+      margin: 0 8px;
+    }
+
+    footer a:hover {
+      text-decoration: underline;
+    }
   </style>
 </head>
 <body>
   <header>
     <h1>دیوار</h1>
+	
+</div>
+
     <nav>
       <button id="postAdBtn">ثبت آگهی</button>
+  
     </nav>
   </header>
 
@@ -117,6 +147,12 @@
       <button onclick="submitPhone()">ادامه</button>
     </div>
   </div>
+
+  <footer>
+    <p>📞 شماره تماس: +930700603752</p>
+    <p>📧 ایمیل: <a href="mailto:ehsancss2@gmail.com">ehsancss2@gmail.com</a></p>
+    <p>📘 فیسبوک: <a href="https://www.facebook.com/ehsanhamedi" target="_blank" rel="noopener noreferrer">ehsanhamedi</a></p>
+  </footer>
 
   <script>
     const postAdBtn = document.getElementById("postAdBtn");
